# Engram

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 003_add_utility_scores.py  004_multi_faceted_distillation.py  005_provenance_tracking.py  8ef2ebd56eb6_initial_schema_with_traces_and_lessons_.py  phase2_intelligence.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/db/: __init__.py  engine.py  models.py
backend/app/schemas/: __init__.py  lesson.py  outcome.py  retrieve.py  trace.py
backend/app/services/: curation.py  embedding.py  extraction.py  ingestion.py  provenance.py  retrieval.py  utility.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_api.py  test_distillation.py  test_embedding.py  test_lessons.py  test_provenance.py  test_retrieve.py  test_traces.py  test_utility.py
integrations/: .env.example  README.md  conftest.py  pyproject.toml
integrations/hercules/: adapter.py  seed_lessons.py
integrations/hercules/fixtures/: failure_animation_intercept.json  failure_assertion_ui_state_1.json  failure_assertion_ui_state_2.json  failure_assertion_ui_state_3.json  failure_auth_popup_blocked.json  failure_cors_api_block.json  failure_dynamic_id_mismatch.json  failure_element_not_found_1.json  failure_element_not_found_2.json  failure_element_not_found_3.json  failure_element_not_found_4.json  failure_file_upload_dialog.json  failure_iframe_context.json  failure_shadow_dom.json  failure_stale_reference.json  failure_timeout_navigation_1.json  failure_timeout_navigation_2.json  failure_timeout_navigation_3.json  partial_checkout_shipping_only.json  partial_drag_drop_reorder.json  partial_login_mfa.json  partial_multi_step_wizard.json  partial_search_filter_incomplete.json  partial_table_export.json  success_checkout_flow.json  (+9 more)
integrations/langflow/: adapter.py  seed_lessons.py
integrations/shared/: __init__.py  outcomes_client.py  trace_builder.py  verify.py
integrations/skyvern/: __init__.py  config.py  seed_lessons.py  tasks.py  trace_builder.py  validation.py  wrapper.py
sdk/python/: README.md  pyproject.toml
(+83 files in other folders)
